--- a/web/index.html
+++ b/web/index.html
@@ -8,9 +8,9 @@
     <script src="scripts/piano.js"></script>
 </head>
 <body>
-    <div class="tooltip" id="instructions">Instructions
+  <!--   <div class="tooltip" id="instructions">Instructions
             <span class="tooltiptext">Click any key of piano or press any key from the middle line of your keyboard</span>
-        </div>
+        </div> -->
     <main>
         
         <div>
